AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(eclipse-scada-ping,0.1.0)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_CONFIG_HEADERS([src/config.h])

AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([stdio.h])
AC_CHECK_HEADERS([time.h])
AC_CHECK_HEADERS([sys/time.h])

AC_OUTPUT([
Makefile
src/Makefile
eclipse-scada-ping.spec
])
